# OOP244

WS06/: Untitled.txt  reflect.txt
WS06/lab/: CMakeLists.txt  TextFile.cpp  TextFile.h  cstring.cpp  cstring.h
WS07/: reflect.txt
WS07/lab/: CMakeLists.txt  MotorVehicle.cpp  MotorVehicle.h  Truck.cpp  Truck.h  cstring.cpp  cstring.h
WS08/: CMakeLists.txt  LblShape.cpp  LblShape.h  reflect.txt
WS08/lab/: Line.cpp  Line.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
WS09/lab/: CMakeLists.txt  main.cpp  searchNlist.h
Workshop 1/: File.cpp  File.h  ShoppingList.h  ShoppingListApp.cpp  ShoppingRec.cpp  ShoppingRec.h  Utils.cpp  Utils.h  shoppingList.cpp  shoppinglist.csv
Workshop2/: Employee.cpp  Employee.h  File.cpp  File.h  employees.csv
Workshop2-DIY/: File.cpp  File.h  Population.cpp  Population.h  cstring.h  reflect.txt
Workshop3/: cstring.cpp
Workshop3-DIY/: CMakeLists.txt  CalorieList.cpp  CalorieList.h  Food.cpp  Food.h  calListTester.cpp  cstring.cpp  cstring.h  reflect.txt  w
Workshop3/lab/: Bill.cpp  Bill.h  Item.cpp  Item.h
Workshop4/: CMakeLists.txt  Canister.cpp  Canister.h  cstring.cpp  cstring.h
Workshop5/: Account.cpp  Account.h  accountMain.cpp
ws05-diy/: CMakeLists.txt  Mark.cpp  Mark.h  markMain.cpp  reflect.txt
